data/all_generated_tests/raw_wast_tests/if_UnreachableCodeExecution_1499.wast
;; 10. **Test Mixed Types in Block Ending with Unreachable**:    - Formulate an `if blocktype` with mixed operand types and end the constructed stack management incorrectly with `unreachable`. Assess how both implementations handle avoiding erroneous execution.  This list of differential test descriptions focuses on scenarios where the lack of reset or initialization in WebAssembly might lead to erroneous execution paths reaching the `unreachable` instruction, thus producing different output compared to the Wizard Engine.

(assert_invalid
  (module (func
    (if (result i32) (i32.const 1) (then (f32.const 1) (unreachable)) (else (i64.const 1) (unreachable)))
  ))
  "type mismatch"
)